# CXC2026_Vite_Frontend

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  package.json  vite.config.ts
AI-GF/: .gitignore  README.md  agent_configs.py  inflection_llm.py  requirements.txt  rime_agent.py  token_server.py
AI-GF/agent_template/: Dex.json  Eliza.json  Katerina.json  Ludia.json  Osmond.json  Wei.json
AI-GF/docs/: built_with.md  devpost_submission.md  gen_ai_usage.md
CXC2026_Django_Backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
CXC2026_Django_Backend/api/: apps.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
CXC2026_Django_Backend/api/migrations/: 0002_remove_profile_avatar_url_profile_avatar.py  0003_alter_profile_avatar.py  0004_profile_avatar_x_profile_avatar_y.py  0005_remove_profile_avatar_profile_banner_x_and_more.py
CXC2026_Django_Backend/config/: asgi.py  settings.py  urls.py  wsgi.py
CXC2026_Django_Backend/docs/: schema.md
CXC2026_Vite_Frontend/: nginx.conf  vite.config.ts
CXC2026_Vite_Frontend/components/: navbar.tsx
CXC2026_Vite_Frontend/src/components/: ProfileCard.tsx
src/: App.tsx  AuthenticatedLayout.tsx
src/components/: ProfileCard.tsx  Sidebar.tsx  VoiceChatModal.tsx  footer.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts  imageUpload.ts  types.ts
src/pages/: DiscoverPage.tsx  LandingPage.tsx  LoginPage.tsx  MyProfilePage.tsx  ProfileDetailPage.tsx  SignUpPage.tsx
supabase/migrations/: 20260210000000_create_profile_images_bucket.sql
(+10 files in other folders)
