[project]
name = "cxc2026-django-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<5.2",
    "dj-database-url>=2,<3",
    "djangorestframework>=3.15,<4",
    "djangorestframework-simplejwt>=5.3,<6",
    "django-cors-headers>=4.3,<5",
    "channels[daphne]>=4.1,<5",
    "Pillow>=10,<12",
    "psycopg[c]; sys_platform == 'linux'",
    "psycopg[binary]; sys_platform != 'linux'",
]
